--- a/printer-bed.cfg
+++ b/printer-bed.cfg
@@ -20,10 +20,12 @@ control: pid
 # pid_kp: 58.437
 # pid_ki: 2.347
 # pid_kd: 363.769
-pid_Kp=40.324 
-pid_Ki=1.093 
-pid_Kd=371.992
-
+# pid_Kp=40.324 
+# pid_Ki=1.093 
+# pid_Kd=371.992
+pid_Kp=64.438 
+pid_Ki=2.498 
+pid_Kd=415.628
 
 [bed_mesh]
 speed: 300
