--- a/printer-head.cfg
+++ b/printer-head.cfg
@@ -14,10 +14,10 @@ sensor_type: Generic 3950
 sensor_pin: EBBCan: PA0
 pressure_advance: 0.1                                             # See tuning pressure advance doc
 #pressure_advance_smooth_time: 0.085
-#control: pid
-#pid_Kp = 26.780
-#pid_Ki = 1.879
-#pid_Kd = 95.402
+control: pid
+pid_Kp=27.783 
+pid_Ki=1.372 
+pid_Kd=140.653
 min_temp: 10
 max_temp: 270
 min_extrude_temp: 20
