--- a/printer.cfg
+++ b/printer.cfg
@@ -22,10 +22,11 @@ serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_3F0039000450565843333620-if00
 [include macro-led.cfg]
 [include timelapse.cfg]
 
-[temperature_sensor mcu_temp]
-sensor_type: temperature_mcu
+[temperature_sensor electronic_bay]
+sensor_type: Generic 3950
+sensor_pin: PF4
 min_temp: 0
-max_temp: 120
+max_temp: 80
 
 # [temperature_sensor raspberry_pi]
 # sensor_type: temperature_host
@@ -125,34 +126,29 @@ horizontal_move_z: 10
 retries: 8
 retry_tolerance: 0.0075
 
-[temperature_fan electronic_fan]
+[temperature_fan electronic_octo]
 # Exhaust/Chamber fan - Z board, HE0 Connector
 pin: PA8
-max_power: .6
-shutdown_speed: 0.0
+sensor_type: temperature_mcu
+max_power: .45
 kick_start_time: 5.0
-# Chamber Thermistor
-sensor_type: Generic 3950
-sensor_pin: PF4
+shutdown_speed: 0.0
 min_temp: 0
 max_temp: 80.0
 target_temp: 35.0   ; Activate Exhaust fan at this temperature
 control: watermark
-gcode_id: Cz
 
 [temperature_fan electronic_rpi]
 # Exhaust/Chamber fan - Z board, HE0 Connector
 pin: PE5
-max_power: .6
+max_power: .45
 shutdown_speed: 0.0
 kick_start_time: 5.0
-# Chamber Thermistor
 sensor_type: temperature_host
 min_temp: 0
-max_temp: 80.0
-target_temp: 50.0   ; Activate Exhaust fan at this temperature
+max_temp: 90.0
+target_temp: 45.0   ; Activate Exhaust fan at this temperature
 control: watermark
-
 
 # [fan_generic electronic_fan1]
 # pin: PB1
