--- a/printer-bed.cfg
+++ b/printer-bed.cfg
@@ -23,9 +23,9 @@ control: pid
 # pid_Kp=40.324 
 # pid_Ki=1.093 
 # pid_Kd=371.992
-pid_Kp=64.438 
-pid_Ki=2.498 
-pid_Kd=415.628
+pid_Kp:64.438 
+pid_Ki:2.498 
+pid_Kd:415.628
 
 [bed_mesh]
 speed: 300
