--- a/printer-head.cfg
+++ b/printer-head.cfg
@@ -15,9 +15,9 @@ sensor_pin: EBBCan: PA0
 pressure_advance: 0.1                                             # See tuning pressure advance doc
 #pressure_advance_smooth_time: 0.085
 control: pid
-pid_Kp=27.783 
-pid_Ki=1.372 
-pid_Kd=140.653
+pid_Kp: 27.841
+pid_Ki: 1.375
+pid_Kd: 140.949
 min_temp: 10
 max_temp: 270
 min_extrude_temp: 20
