--- a/printer-resonance.cfg
+++ b/printer-resonance.cfg
@@ -7,3 +7,10 @@ probe_points:
 cs_pin: EBBCan: PB12
 spi_bus: spi2
 axes_map: x,y,z
+
+
+[input_shaper]
+shaper_type_x = mzv
+shaper_freq_x = 56.2
+shaper_type_y = mzv
+shaper_freq_y = 42.0
