--- a/printer-head.cfg
+++ b/printer-head.cfg
@@ -13,14 +13,12 @@ heater_pin: EBBCan: PB1
 sensor_type: Generic 3950
 sensor_pin: EBBCan: PA0
 pressure_advance: 0.1                                             # See tuning pressure advance doc
-#pressure_advance_smooth_time: 0.085
 control: pid
-pid_Kp: 27.841
-pid_Ki: 1.375
-pid_Kd: 140.949
-min_temp: 10
+pid_Kp: 28.769 
+pid_Ki: 1.464 
+pid_Kd: 141.328
+min_temp: 0
 max_temp: 270
-min_extrude_temp: 20
 
 
 
@@ -39,7 +37,7 @@ kick_start_time: 2
 off_below: 0.10
 max_power: 1.0
 #ardware_pwm: true
-cycle_time: 0.00002
+#cycle_time: 0.00002
 
 [heater_fan hotend_fan]
 pin: EBBCan: PA1
