--- a/printer.cfg
+++ b/printer.cfg
@@ -3,10 +3,11 @@
 [mcu EBBCan]
 canbus_uuid: 3d60339a57c8
 
+
 [mcu]
 ##  this is fixwd should not be changed for big dipper
-serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_3F0039000450565843333620-if00
-
+#serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_3F0039000450565843333620-if00
+canbus_uuid: 267ab8cc9c8a
 
 [include mainsail.cfg]
 [include ./klicky-probe.cfg]  
@@ -36,7 +37,7 @@ max_temp: 80
 [printer]
 kinematics: corexy
 max_velocity: 300  
-max_accel: 4000             #Max 4000
+max_accel: 8000             #Max 4000
 max_z_velocity: 15          #Max 15 for 12V TMC Drivers, can increase for 24V
 max_z_accel: 350
 square_corner_velocity: 5.0
@@ -150,3 +151,24 @@ max_temp: 90.0
 target_temp: 45.0   ; Activate Exhaust fan at this temperature
 control: watermark
 
+#*# <---------------------- SAVE_CONFIG ---------------------->
+#*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
+#*#
+#*# [bed_mesh hot]
+#*# version = 1
+#*# points =
+#*# 	  0.025625, -0.004375, -0.017500, -0.041875, -0.011250
+#*# 	  -0.021250, -0.029375, -0.016875, -0.011250, -0.031250
+#*# 	  -0.001875, 0.003750, -0.020000, 0.000000, 0.004375
+#*# 	  -0.016250, 0.015000, 0.023750, -0.011250, -0.001875
+#*# 	  -0.008750, -0.027500, -0.005000, 0.004375, 0.076875
+#*# tension = 0.2
+#*# min_x = 40.0
+#*# algo = bicubic
+#*# y_count = 5
+#*# mesh_y_pps = 2
+#*# min_y = 40.0
+#*# x_count = 5
+#*# max_y = 220.0
+#*# mesh_x_pps = 2
+#*# max_x = 220.0
