--- a/macro-start-stop.cfg
+++ b/macro-start-stop.cfg
@@ -60,7 +60,7 @@ gcode:
     #BED_MESH_CLEAR
     #BED_MESH_CALIBRATE
     #BED_MESH_CALIBRATE AREA_START={variable_parameter_AREA_START} AREA_END={variable_parameter_AREA_END} 
-    #BED_MESH_PROFILE LOAD=hot
+    BED_MESH_PROFILE LOAD=hot
     CENTER
     # M="Wait for nozzle to reach {EXTRUDER_TEMP}"
     M109 S{EXTRUDER_TEMP}   
