--- a/printer-resonance.cfg
+++ b/printer-resonance.cfg
@@ -2,15 +2,16 @@
 accel_chip: adxl345
 probe_points:
     125, 125, 20  # an example
+max_freq: 100
 
 [adxl345]
 cs_pin: EBBCan: PB12
 spi_bus: spi2
 axes_map: x,y,z
-
+#rate: 1600
 
 [input_shaper]
-shaper_type_x = mzv
-shaper_freq_x = 56.2
-shaper_type_y = mzv
-shaper_freq_y = 42.0
+shaper_type_x: mzv
+shaper_freq_x: 55.4
+shaper_type_y: ei
+shaper_freq_y: 48.0
