--- a/printer-resonance.cfg
+++ b/printer-resonance.cfg
@@ -2,7 +2,7 @@
 accel_chip: adxl345
 probe_points:
     125, 125, 20  # an example
-max_freq: 100
+#max_freq: 100
 
 [adxl345]
 cs_pin: EBBCan: PB12
