--- a/printer.cfg
+++ b/printer.cfg
@@ -6,8 +6,8 @@ canbus_uuid: 3d60339a57c8
 
 [mcu]
 ##  this is fixwd should not be changed for big dipper
-#serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_3F0039000450565843333620-if00
-canbus_uuid: 267ab8cc9c8a
+serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_3F0039000450565843333620-if00
+#canbus_uuid: 267ab8cc9c8a
 
 [include mainsail.cfg]
 [include ./klicky-probe.cfg]  
@@ -22,6 +22,11 @@ canbus_uuid: 267ab8cc9c8a
 [include macro-filament.cfg]  
 [include macro-led.cfg]
 [include timelapse.cfg]
+[include shelly.cfg]
+
+[temperature_sensor EBBCan]
+sensor_type: temperature_mcu
+sensor_mcu: EBBCan
 
 [temperature_sensor electronic_bay]
 sensor_type: Generic 3950
