New config Hartk style

--- a/mainsail.cfg
+++ b/mainsail.cfg
@@ -4,7 +4,7 @@
 #
 # This file may be distributed under the terms of the GNU GPLv3 license
 #
-# Version 1.11
+# Version 1.7
 
 # add [include mainsail.cfg] to your printer.cfg to include it to your printer.cfg
 # modify x_park, y_park, z_park_delta and extrude value at the macro _TOOLHEAD_PARK_PAUSE_CANCEL if needed
@@ -12,9 +12,7 @@
 # use variable_park: False at CANCEL_PRINT to disallow the parking move
 
 [virtual_sdcard]
-path: ~/gcode_files
-on_error_gcode:
-  CANCEL_PRINT
+path: /home/pi/gcode_files
 
 [pause_resume]
 
@@ -28,11 +26,9 @@ gcode:
   ## Move head and retract only if not already in the pause state and park set to true
   {% if printer.pause_resume.is_paused|lower == 'false' and park|lower == 'true'%}
     _TOOLHEAD_PARK_PAUSE_CANCEL
-    
   {% endif %}
-  G1 z50 F600
   TURN_OFF_HEATERS
-  M106 S0
+  COUNTER_OFF
   CANCEL_PRINT_BASE
 
 [gcode_macro PAUSE]
@@ -61,7 +57,7 @@ gcode:
     {% if printer.gcode_move.absolute_extrude |lower == 'true' %} M82 {% endif %}
   {% else %}
     {action_respond_info("Extruder not hot enough")}
-  {% endif %}
+  {% endif %}  
   RESUME_BASE {get_params}
 
 [gcode_macro _TOOLHEAD_PARK_PAUSE_CANCEL]
@@ -70,8 +66,8 @@ variable_extrude: 1.0
 gcode:
   ##### set park positon for x and y #####
   # default is your max posion from your printer.cfg
-  {% set x_park = printer.toolhead.axis_maximum.x|float - 5.0 %}
-  {% set y_park = printer.toolhead.axis_maximum.y|float - 5.0 %}
+  {% set x_park = printer.toolhead.axis_maximum.x|float / 2 %}
+  {% set y_park = 10 %}
   {% set z_park_delta = 2.0 %}
   ##### calculate save lift position #####
   {% set max_z = printer.toolhead.axis_maximum.z|float %}
