--- a/printer.cfg
+++ b/printer.cfg
@@ -1,179 +1,40 @@
-# Otopus v1.1
-
-[mcu EBBCan]
-canbus_uuid: 3d60339a57c8
-
-
-[mcu]
-##  this is fixwd should not be changed for big dipper
-serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_3F0039000450565843333620-if00
-#canbus_uuid: 267ab8cc9c8a
-
 [include mainsail.cfg]
-[include ./klicky-probe.cfg]  
-[include ./klicky-autoz.cfg]    
-[include macro-start-stop.cfg]    
-[include printer-xy.cfg]    
-[include printer-z.cfg]    
-[include printer-bed.cfg]    
-[include printer-head.cfg]    
-[include stealthburner_leds.cfg]    
-[include printer-resonance.cfg]    
-[include macro-filament.cfg]  
-[include macro-led.cfg]
-[include timelapse.cfg]
-[include shelly.cfg]
 
-[temperature_sensor EBBCan]
-sensor_type: temperature_mcu
-sensor_mcu: EBBCan
+##################
+#### Hardware ####
+##################
+[include Hardware/thermistors.cfg]
+[include Hardware/heaters.cfg]
 
-[temperature_sensor electronic_bay]
-sensor_type: Generic 3950
-sensor_pin: PF4
-min_temp: 0
-max_temp: 80
+[include Hardware/fans.cfg]
+[include Hardware/mcu.cfg]
+[include Hardware/kinematics.cfg]
+[include Hardware/misc.cfg]
+[include Hardware/adxl.cfg]
+[include Hardware/Axis/Z_Steppers.cfg]
+[include Hardware/Axis/XY_Steppers.cfg]
+[include Hardware/Axis/E_Stepper.cfg]
 
-# [temperature_sensor raspberry_pi]
-# sensor_type: temperature_host
-# min_temp: 0
-# max_temp: 100
-
-[printer]
-kinematics: corexy
-max_velocity: 300  
-max_accel: 8000             #Max 4000
-max_z_velocity: 15          #Max 15 for 12V TMC Drivers, can increase for 24V
-max_z_accel: 350
-square_corner_velocity: 5.0
-
-[idle_timeout]
-timeout: 1800
+################
+#### Macros ####
+################
+[include Macros/printer_macros.cfg]
+[include Macros/base_macros.cfg]
+[include Macros/shellCommands.cfg]
+#[include Macros/homing.cfg]
+[include Macros/Helpers/filament_swap.cfg]
+[include Macros/Calibration/calibration.cfg]
+[include Macros/Calibration/pa_calibrate.cfg]
+[include Macros/shelly.cfg]
+[include Macros/LEDS/sb_leds.cfg]
 
 
+################
+#### Klicky ####
+################
+[include Klicky/klicky-probe.cfg]
 
-[temperature_sensor chamber_sensor]
-sensor_type: Generic 3950
-sensor_pin: PF5
-
-
-
-[filament_switch_sensor filament]
-pause_on_runout: True
-#   When set to True, a PAUSE will execute immediately after a runout
-#   is detected. Note that if pause_on_runout is False and the
-#   runout_gcode is omitted then runout detection is disabled. Default
-#   is True.
-#runout_gcode:
-#   A list of G-Code commands to execute after a filament runout is
-#   detected. See docs/Command_Templates.md for G-Code format. If
-#   pause_on_runout is set to True this G-Code will run after the
-#   PAUSE is complete. The default is not to run any G-Code commands.
-#insert_gcode:
-#   A list of G-Code commands to execute after a filament insert is
-#   detected. See docs/Command_Templates.md for G-Code format. The
-#   default is not to run any G-Code commands, which disables insert
-#   detection.
-#event_delay: 3.0
-#   The minimum amount of time in seconds to delay between events.
-#   Events triggered during this time period will be silently
-#   ignored. The default is 3 seconds.
-#pause_delay: 0.5
-#   The amount of time to delay, in seconds, between the pause command
-#   dispatch and execution of the runout_gcode. It may be useful to
-#   increase this delay if OctoPrint exhibits strange pause behavior.
-#   Default is 0.5 seconds.
-switch_pin: ^PG9
-#   The pin on which the switch is connected. This parameter must be
-#   provided.
-
-
-
-[z_tilt]
-##  Use Z_TILT_ADJUST to level the bed .
-##  z_positions: Location of toolhead
-
-##--------------------------------------------------------------------
-## Uncomment below for 250mm build
-z_positions:
-    -50, 18
-    125, 298
-    300, 18
-points:
-    30, 5
-    125, 195
-    220, 5
-
-## Uncomment below for 300mm build
-#z_positions:
-#   -50, 18
-#   150, 348
-#   350, 18
-#points:
-#   30, 5
-#   150, 245
-#   270, 5
-
-## Uncomment below for 350mm build
-#z_positions:
-#   -50, 18
-#   175, 398
-#   400, 18
-#points:
-#   30, 5
-#   175, 295
-#   320, 5
-
-
-##--------------------------------------------------------------------
-
-speed: 200
-horizontal_move_z: 10
-retries: 8
-retry_tolerance: 0.0075
-
-[temperature_fan electronic_octo]
-# Exhaust/Chamber fan - Z board, HE0 Connector
-pin: PA8
-sensor_type: temperature_mcu
-max_power: .45
-kick_start_time: 5.0
-shutdown_speed: 0.0
-min_temp: 0
-max_temp: 80.0
-target_temp: 35.0   ; Activate Exhaust fan at this temperature
-control: watermark
-
-[temperature_fan electronic_rpi]
-# Exhaust/Chamber fan - Z board, HE0 Connector
-pin: PE5
-max_power: .45
-shutdown_speed: 0.0
-kick_start_time: 5.0
-sensor_type: temperature_host
-min_temp: 0
-max_temp: 90.0
-target_temp: 45.0   ; Activate Exhaust fan at this temperature
-control: watermark
-
-#*# <---------------------- SAVE_CONFIG ---------------------->
-#*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
-#*#
-#*# [bed_mesh hot]
-#*# version = 1
-#*# points =
-#*# 	  0.025625, -0.004375, -0.017500, -0.041875, -0.011250
-#*# 	  -0.021250, -0.029375, -0.016875, -0.011250, -0.031250
-#*# 	  -0.001875, 0.003750, -0.020000, 0.000000, 0.004375
-#*# 	  -0.016250, 0.015000, 0.023750, -0.011250, -0.001875
-#*# 	  -0.008750, -0.027500, -0.005000, 0.004375, 0.076875
-#*# tension = 0.2
-#*# min_x = 40.0
-#*# algo = bicubic
-#*# y_count = 5
-#*# mesh_y_pps = 2
-#*# min_y = 40.0
-#*# x_count = 5
-#*# max_y = 220.0
-#*# mesh_x_pps = 2
-#*# max_x = 220.0
+################
+#### Probe ####
+################
+[include Probe/Probe.cfg]
