--- a/Klicky/klicky-probe.cfg
+++ b/Klicky/klicky-probe.cfg
@@ -6,3 +6,4 @@
 [include ./klicky-macros.cfg]                   #Required
 [include ./klicky-bed-mesh-calibrate.cfg]      #bed mesh, requires klipper configuration
 [include ./klicky-z-tilt-adjust.cfg]           #level 2 or 3 Z motors
+[include ./klicky-z-calibration.cfg]
