--- a/Macros/LEDS/sb_leds.cfg
+++ b/Macros/LEDS/sb_leds.cfg
@@ -10,7 +10,7 @@
 # How to use all this stuff:
 #
 #     1.  Copy this .cfg file into your Klipper config directory and then add [include stealthburner_leds.cfg]
-#         to the top of your printer.cfg in order to register the LEDs and macros with Klipper.
+#         to the top of your printer.cfg in order for register the LEDs and macros with Klipper.
 #     2.  Define your LEDs by editing [neopixel sb_leds] below and entering the data pin from your control board
 #         as well as the color order.
 #
@@ -45,7 +45,8 @@
 #
 #     5.  Feel free to change colors of each macro, create new ones if you have a need to.  The macros provided below
 #         are just an example of what is possible.  If you want to try some more complex animations, you will most
-#         likely have to use WLED with Moonraker and a small micro-controller 
+#         likely have to use WLED with Moonraker and a small micro-controller (please see the LED thread for help inside
+#         of the stealthburner_beta channel on Discord).
 #
 #####################################
 #       END INSTRUCTRUCTIONS        #
@@ -111,14 +112,14 @@ variable_colors: {
             'leveling': {'r': 0.5, 'g': 0.1, 'b': 0.4, 'w': 0.0},
             'meshing': {'r': 0.2, 'g': 1.0, 'b': 0.0, 'w': 0.0},
             'off': {'r': 0.0, 'g': 0.0, 'b': 0.0, 'w': 0.0},
-            'printing': {'r': 1.0, 'g': 0.0, 'b': 0.0, 'w': 0.0},
-            'standby': {'r': 0.01, 'g': 0.01, 'b': 0.01, 'w': 0.1},
+            'printing': {'r': 0.0, 'g': 1.0, 'b': 0.0, 'w': 0.0},
+            'standby': {'r': 0.0, 'g': 1.0, 'b': 0.0, 'w': 0.0},
         },
         'nozzle': { # Colors for nozzle states
             'heating': {'r': 0.8, 'g': 0.35, 'b': 0.0, 'w':0.0},
             'off': {'r': 0.0, 'g': 0.0, 'b': 0.0, 'w': 0.0},
             'on': {'r': 0.8, 'g': 0.8, 'b': 0.8, 'w':1.0},
-            'standby': {'r': 0.6, 'g': 0.0, 'b': 0.0, 'w':0.0},
+            'standby': {'r': 0.8, 'g': 0.8, 'b': 0.8, 'w':0.8},
         },
         'thermal': {
             'hot': {'r': 1.0, 'g': 0.0, 'b': 0.0, 'w': 0.0},
@@ -161,9 +162,9 @@ gcode:
     {% set led = printer["gcode_macro _sb_vars"][leds_name + "_led_name"] %}
     {% set idx = printer["gcode_macro _sb_vars"][leds_name + "_idx"] %}
     {% set transmit = params.TRANSMIT|default(1) %}
-
+    DISPLAYTEXT TEXT={color_name}
     _set_sb_leds led={led} red={color.r} green={color.g} blue={color.b} white={color.w} idx="{idx}" transmit={transmit}
-
+    
 [gcode_macro _set_logo_leds]
 gcode:
     {% set red = params.RED|default(0)|float %}
@@ -210,6 +211,7 @@ gcode:
 
 [gcode_macro status_ready]
 gcode:
+    
     _set_sb_leds_by_name leds="logo" color="standby" transmit=0
     _set_sb_leds_by_name leds="nozzle" color="standby" transmit=1
 
@@ -233,6 +235,7 @@ gcode:
     _set_sb_leds_by_name leds="logo" color="homing" transmit=0
     set_nozzle_leds_on
 
+
 [gcode_macro status_cleaning]
 gcode:
     _set_sb_leds_by_name leds="logo" color="cleaning" transmit=0
@@ -252,3 +255,10 @@ gcode:
 gcode:
     _set_sb_leds_by_name leds="logo" color="printing" transmit=0
     set_nozzle_leds_on
+
+##  Set RGB values on boot up for each Neopixel. 
+##  Index 1 = logo, Index 2 and 3 = nozzle
+[delayed_gcode set_sb_leds_on_boot]
+initial_duration: 1
+gcode:
+        status_ready
