--- a/moonraker.conf
+++ b/moonraker.conf
@@ -3,6 +3,7 @@ host: 0.0.0.0
 port: 7125
 enable_debug_logging: False
 klippy_uds_address: /tmp/klippy_uds
+max_upload_size: 1024
 
 [authorization]
 trusted_clients:
