--- a/Macros/printer_macros.cfg
+++ b/Macros/printer_macros.cfg
@@ -46,20 +46,23 @@ gcode:
     #COMPUTE_MESH_PARAMETERS SIZE={FL_SIZE}
     #CLEAN_NOZZLE
     #ADAPTIVE_BED_MESH
-    BED_MESH_PROFILE LOAD=hot
+    #BED_MESH_PROFILE LOAD=hot
     SET_TEMP HEATER="extruder" TEMP={EXTRUDER} WAIT=1 ;wait final extruder temp
+    CALIBRATE_Z
     RESET_EXTRUDER        
-    PURGE
+    #PURGE
+
+    PRIME_LINE
     #COUNTER_ON
     STATUS_READY
     DISPLAYTEXT TEXT="Printing..."
- 
+   
 
 [gcode_macro PRINT_END]
 #   Use PRINT_END FILENAME={input_filename_base} for the slicer ending script - please customise for your slicer of choice
 gcode:
     {% set FILENAME = params.FILENAME|default("Print")|string %}
-    COUNTER_OFF
+    
     # safe anti-stringing move coords
     {% set th = printer.toolhead %}
     {% set x_safe = th.position.x + 20 * (1 if th.axis_maximum.x - th.position.x > 20 else -1) %}
@@ -80,13 +83,13 @@ gcode:
     
     BED_MESH_CLEAR
     RESTORE_GCODE_STATE NAME=STATE_PRINT_END
-    NEVERMORE_OFF
+    
     CTRLFAN_OFF
     {% if ".gcode" in FILENAME %}
     {% set FILENAME = FILENAME[0:-6] + " has finished!" %}
     {% endif %}
     DISPLAYTEXT TEXT={FILENAME}
-
+    SHUTDOWN
  
      
 
