--- a/Hardware/thermistors.cfg
+++ b/Hardware/thermistors.cfg
@@ -12,7 +12,7 @@ sensor_pin: PF3
 #####################################################################
 
 [extruder]
-sensor_type: Generic 3950
+sensor_type: ATC Semitec 104GT-2
 sensor_pin: EBBCan: PA0
 
 #####################################################################
