--- a/Macros/Calibration/pa_calibrate.cfg
+++ b/Macros/Calibration/pa_calibrate.cfg
@@ -24,7 +24,7 @@
 # Make sure your axis are homed, your bed mesh is loaded (if you are using one) and both the hotend and the bed are at the temperature required for your filament.
 # Usage:
 #   PRESSURE_ADVANCE_CALIBRATION START=0.01 INCREMENT=0.002 RAFT=1
-#
+#   PRESSURE_ADVANCE_CALIBRATION START=0.03 INCREMENT=0.005 RAFT=0
 # Primary input parameters:
 #    START       : default(0.02)   PA value to start with
 #    INCREMENT   : default(0.005)  PA value to increment for each subsequent band
