--- a/Macros/printer_macros.cfg
+++ b/Macros/printer_macros.cfg
@@ -17,7 +17,7 @@ gcode:
 
 [gcode_macro G32]
 gcode:
-    BED_MESH_CLEAR
+    #BED_MESH_CLEAR
     HOME
     #QUAD_GANTRY_LEVEL
     Z_TILT_ADJUST
@@ -46,7 +46,8 @@ gcode:
     #COMPUTE_MESH_PARAMETERS SIZE={FL_SIZE}
     #CLEAN_NOZZLE
     #ADAPTIVE_BED_MESH
-    #BED_MESH_PROFILE LOAD=hot
+    BED_MESH_PROFILE LOAD=hot2
+    #BED_MESH_CALIBRATE
     SET_TEMP HEATER="extruder" TEMP={EXTRUDER} WAIT=1 ;wait final extruder temp
     CALIBRATE_Z
     RESET_EXTRUDER        
@@ -81,7 +82,7 @@ gcode:
     G0 X{th.axis_maximum.x//2} Y{th.axis_maximum.y - 2} F3600  ; park nozzle at rear
     SET_FAN                                
     
-    BED_MESH_CLEAR
+    #BED_MESH_CLEAR
     RESTORE_GCODE_STATE NAME=STATE_PRINT_END
     
     CTRLFAN_OFF
