--- a/printer.cfg
+++ b/printer.cfg
@@ -38,3 +38,63 @@
 #### Probe ####
 ################
 [include Probe/Probe.cfg]
+
+#*# <---------------------- SAVE_CONFIG ---------------------->
+#*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
+#*#
+#*# [bed_mesh default]
+#*# version = 1
+#*# points =
+#*# 	  0.043125, 0.026250, 0.002500, -0.013750, 0.003750
+#*# 	  0.016250, 0.039375, 0.001875, 0.021875, -0.005625
+#*# 	  0.047500, 0.031250, 0.021875, 0.000000, -0.001250
+#*# 	  0.060000, 0.040625, 0.038750, 0.017500, 0.017500
+#*# 	  0.057500, 0.051875, 0.062500, 0.041250, 0.055000
+#*# tension = 0.2
+#*# min_x = 40.0
+#*# algo = bicubic
+#*# y_count = 5
+#*# mesh_y_pps = 2
+#*# min_y = 40.0
+#*# x_count = 5
+#*# max_y = 220.0
+#*# mesh_x_pps = 2
+#*# max_x = 220.0
+#*#
+#*# [bed_mesh hot]
+#*# version = 1
+#*# points =
+#*# 	0.114375, 0.073750, 0.015625, -0.008125, 0.026875
+#*# 	0.095000, 0.063750, 0.007500, -0.026250, -0.056875
+#*# 	0.131250, 0.093750, 0.006250, 0.000000, -0.024375
+#*# 	0.136250, 0.100000, 0.065000, 0.023125, -0.009375
+#*# 	0.143125, 0.110625, 0.103750, 0.051875, 0.115625
+#*# tension = 0.2
+#*# min_x = 40.0
+#*# algo = bicubic
+#*# y_count = 5
+#*# mesh_y_pps = 2
+#*# min_y = 40.0
+#*# x_count = 5
+#*# max_y = 220.0
+#*# mesh_x_pps = 2
+#*# max_x = 220.0
+#*#
+#*# [bed_mesh hot2]
+#*# version = 1
+#*# points =
+#*# 	  0.043125, 0.026250, 0.002500, -0.013750, 0.003750
+#*# 	  0.016250, 0.039375, 0.001875, 0.021875, -0.005625
+#*# 	  0.047500, 0.031250, 0.021875, 0.000000, -0.001250
+#*# 	  0.060000, 0.040625, 0.038750, 0.017500, 0.017500
+#*# 	  0.057500, 0.051875, 0.062500, 0.041250, 0.055000
+#*# tension = 0.2
+#*# min_x = 40.0
+#*# algo = bicubic
+#*# y_count = 5
+#*# mesh_y_pps = 2
+#*# min_y = 40.0
+#*# x_count = 5
+#*# max_y = 220.0
+#*# mesh_x_pps = 2
+#*# max_x = 220.0
