--- a/Macros/base_macros.cfg
+++ b/Macros/base_macros.cfg
@@ -41,7 +41,8 @@ gcode:
     SET_PRESSURE_ADVANCE ADVANCE=0.0650
     {% elif MATERIAL == "ABS" %}
     SET_PRESSURE_ADVANCE ADVANCE=0.0460
-    NEVERMORE_ON
+    SET_PRESSURE_ADVANCE ADVANCE=0.0750
+    #NEVERMORE_ON
     {% else %}
        {% set TEXT ="No PA value for " + MATERIAL %}
     {% endif %}
