--- a/Probe/Probe.cfg
+++ b/Probe/Probe.cfg
@@ -82,7 +82,7 @@ fade_start: 0.6
 fade_end: 10.0
 probe_count: 5,5
 algorithm: bicubic
-
+relative_reference_index: 13
 
 [gcode_macro BED_MESH_CLEAR]
 rename_existing: _BED_MESH_CLEAR
