--- a/KlipperScreen.conf
+++ b/KlipperScreen.conf
@@ -1,3 +1,18 @@
+[menu __main homing]
+name: Homing
+icon: home
+
+[menu __main actions]
+name: {{ gettext('Actions') }}
+icon: move
+
+[menu __main actions shutdown]
+name: Shutdown
+icon: shutdown
+method: printer.gcode.script
+params: {"script":"SHUTDOWN"}
+
+
 
 #~# --- Do not edit below this line. This section is auto generated --- #~#
 
