--- a/Macros/shelly.cfg
+++ b/Macros/shelly.cfg
@@ -6,6 +6,7 @@ verbose: True
 [gcode_macro SHUTDOWN]
 gcode:
     RUN_SHELL_COMMAND CMD=TURN_OFF_SHELLY
+    RUN_SHELL_COMMAND CMD=TURN_OFF_SHELLY
     UPDATE_DELAYED_GCODE ID=SHUTDOWNRPI DURATION=8
 
 
