homing and leds

--- a/Hardware/Axis/XY_Steppers.cfg
+++ b/Hardware/Axis/XY_Steppers.cfg
@@ -13,13 +13,14 @@ enable_pin: !PG2
 rotation_distance: 40
 microsteps: 32
 full_steps_per_rotation:200  #set to 400 for 0.9 degree stepper
-endstop_pin: ^PG6
+endstop_pin: tmc2209_stepper_y:virtual_endstop
+#endstop_pin: ^PG6
 position_min: 0
 ##--------------------------------------------------------------------
 
 ##  Uncomment below for 250mm build
-position_endstop: 250
-position_max: 252
+position_endstop: 249
+position_max: 258
 
 ##  Uncomment for 300mm build
 #position_endstop: 300
@@ -30,7 +31,7 @@ position_max: 252
 #position_max: 350
 
 ##--------------------------------------------------------------------
-homing_speed: 25   #Max 100
+homing_speed: 20   #Max 100
 homing_retract_dist: 5
 homing_positive_dir: true
 
@@ -41,6 +42,8 @@ interpolate: False
 run_current: 0.8
 sense_resistor: 0.110
 stealthchop_threshold: 0
+diag_pin: ^PG12
+driver_SGTHRS: 50
 
 ##  A Stepper - Right
 ##  Connected to MOTOR_1
@@ -55,7 +58,8 @@ enable_pin: !PA0
 rotation_distance: 40
 microsteps: 32
 full_steps_per_rotation:200  #set to 400 for 0.9 degree stepper
-endstop_pin: ^PG12  
+endstop_pin: tmc2209_stepper_x:virtual_endstop
+#endstop_pin: ^PG12  
 position_min: 0
 ##--------------------------------------------------------------------
 
@@ -72,7 +76,7 @@ position_max: 250
 #position_max: 350
 
 ##--------------------------------------------------------------------
-homing_speed: 25  #Max 100
+homing_speed: 20  #Max 100
 homing_retract_dist: 5
 homing_positive_dir: true
 
@@ -84,3 +88,5 @@ interpolate: False
 run_current: 0.8
 sense_resistor: 0.110
 stealthchop_threshold: 0
+diag_pin: ^PG11
+driver_SGTHRS: 50
