--- a/Hardware/fans.cfg
+++ b/Hardware/fans.cfg
@@ -45,3 +45,6 @@ min_temp: 0
 max_temp: 90.0
 target_temp: 45.0   ; Activate Exhaust fan at this temperature
 control: watermark
+
+[fan_generic nevermore]
+pin: PD12
