--- a/Macros/homing.cfg
+++ b/Macros/homing.cfg
@@ -7,7 +7,7 @@ gcode:
     DISPLAYTEXT TEXT="Honey, Im Home!"
 
 [homing_override]
-axes: xyz
+axes: xy
 set_position_x: 5
 set_position_y: 5
 set_position_z: 5
@@ -81,22 +81,22 @@ gcode:
     SET_TMC_CURRENT STEPPER=stepper_x CURRENT={RUN_CURRENT_X}
     SET_TMC_CURRENT STEPPER=stepper_y CURRENT={RUN_CURRENT_Y}
 
-[gcode_macro _HOME_Z]
-gcode:
-    {% set th = printer.toolhead %}
-    {% set RUN_CURRENT_Z = printer.configfile.settings['tmc2209 stepper_z'].run_current|float %}
-    {% set HOME_CURRENT = 0.7 %}
-    DISPLAYTEXT TEXT="Homing Z Axis"
-    SET_TMC_CURRENT STEPPER=stepper_z CURRENT={HOME_CURRENT}
-    SET_TMC_CURRENT STEPPER=stepper_z1 CURRENT={HOME_CURRENT}
-    SET_TMC_CURRENT STEPPER=stepper_z2 CURRENT={HOME_CURRENT}
-    SET_TMC_CURRENT STEPPER=stepper_z3 CURRENT={HOME_CURRENT}
-    ABSOLUTE_COORDINATES
-    G0 X{th.axis_maximum.x//2} Y{th.axis_maximum.y//2} F3600  ; move to the center of bed
-    G28 Z
-    G1 Z30
-    # Set current for printing
-    SET_TMC_CURRENT STEPPER=stepper_z CURRENT={RUN_CURRENT_Z}
-    SET_TMC_CURRENT STEPPER=stepper_z1 CURRENT={RUN_CURRENT_Z}
-    SET_TMC_CURRENT STEPPER=stepper_z2 CURRENT={RUN_CURRENT_Z}
-    SET_TMC_CURRENT STEPPER=stepper_z3 CURRENT={RUN_CURRENT_Z}
+# [gcode_macro _HOME_Z]
+# gcode:
+#     {% set th = printer.toolhead %}
+#     {% set RUN_CURRENT_Z = printer.configfile.settings['tmc2209 stepper_z'].run_current|float %}
+#     {% set HOME_CURRENT = 0.7 %}
+#     DISPLAYTEXT TEXT="Homing Z Axis"
+#     SET_TMC_CURRENT STEPPER=stepper_z CURRENT={HOME_CURRENT}
+#     SET_TMC_CURRENT STEPPER=stepper_z1 CURRENT={HOME_CURRENT}
+#     SET_TMC_CURRENT STEPPER=stepper_z2 CURRENT={HOME_CURRENT}
+#     SET_TMC_CURRENT STEPPER=stepper_z3 CURRENT={HOME_CURRENT}
+#     ABSOLUTE_COORDINATES
+#     G0 X{th.axis_maximum.x//2} Y{th.axis_maximum.y//2} F3600  ; move to the center of bed
+#     G28 Z
+#     G1 Z30
+#     # Set current for printing
+#     SET_TMC_CURRENT STEPPER=stepper_z CURRENT={RUN_CURRENT_Z}
+#     SET_TMC_CURRENT STEPPER=stepper_z1 CURRENT={RUN_CURRENT_Z}
+#     SET_TMC_CURRENT STEPPER=stepper_z2 CURRENT={RUN_CURRENT_Z}
+#     SET_TMC_CURRENT STEPPER=stepper_z3 CURRENT={RUN_CURRENT_Z}
