--- a/printer.cfg
+++ b/printer.cfg
@@ -9,6 +9,7 @@
 [include Hardware/heaters.cfg]
 
 [include Hardware/fans.cfg]
+[include Hardware/leds.cfg]
 [include Hardware/mcu.cfg]
 [include Hardware/kinematics.cfg]
 [include Hardware/misc.cfg]
@@ -23,12 +24,13 @@
 [include Macros/printer_macros.cfg]
 [include Macros/base_macros.cfg]
 [include Macros/shellCommands.cfg]
-#[include Macros/homing.cfg]
+[include Macros/homing.cfg]
 [include Macros/Helpers/filament_swap.cfg]
 [include Macros/Calibration/calibration.cfg]
 [include Macros/Calibration/pa_calibrate.cfg]
 [include Macros/shelly.cfg]
 [include Macros/LEDS/sb_leds.cfg]
+[include Macros/LEDS/case_leds.cfg]
 
 
 ################
