--- a/Macros/LEDS/case_leds.cfg
+++ b/Macros/LEDS/case_leds.cfg
@@ -39,21 +39,21 @@ gcode:
 [gcode_macro STATUS_HEATING]
 rename_existing: STATUS_HEATING_OLD
 gcode:
-    NEOPIXEL_PROGRESS LED=case_led INDEX=21 NUM=21 TEMPLATE="led_bed_temp_progress"       FGCOLOR1=0.0,0.5,0.0,0.0 FGCOLOR2=0.0,0.0,0.5,0.0 FGCOLOR3=0.5,0.0,0.0,0.0 BGCOLOR=0.5,0.5,0.5,0.0
-    NEOPIXEL_PROGRESS LED=case_led INDEX=0  NUM=21  TEMPLATE="led_extruder_temp_progress" FGCOLOR1=0.0,0.5,0.0,0.0 FGCOLOR2=0.0,0.0,0.5,0.0 FGCOLOR3=0.5,0.0,0.0,0.0 BGCOLOR=0.5,0.5,0.5,0.0
+    NEOPIXEL_PROGRESS LED=case_led INDEX=21 NUM=21 TEMPLATE="led_bed_temp_progress"       FGCOLOR1=0.0,0.5,0.0,0.0 FGCOLOR2=0.0,0.0,0.8,0.0 BGCOLOR=0.5,0.5,0.5,0.0
+    NEOPIXEL_PROGRESS LED=case_led INDEX=0  NUM=21  TEMPLATE="led_extruder_temp_progress" FGCOLOR1=0.0,0.5,0.0,0.0 FGCOLOR2=0.0,0.0,0.8,0.0 FGCOLOR3=0.5,0.0,0.0,0.0 BGCOLOR=0.5,0.5,0.5,0.0
 
 [gcode_macro STATUS_PRINTING]
 rename_existing: STATUS_PRINTING_OLD
 gcode:
-    NEOPIXEL_PROGRESS LED=case_led INDEX=21 NUM=21 TEMPLATE="led_print_percent_progress" FGCOLOR=0.5,0.0,0.0,0.0 BGCOLOR=0.5,0.5,0.5,0.0
-    NEOPIXEL_PROGRESS LED=case_led INDEX=0  NUM=21 TEMPLATE="led_printer_speed_progress" FGCOLOR=0.5,0.0,0.0,0.0 BGCOLOR=0.5,0.5,0.5,0.0
+    NEOPIXEL_PROGRESS LED=case_led INDEX=21 NUM=21 TEMPLATE="led_print_percent_progress" FGCOLOR1=0.5,0.0,0.0,0.0 BGCOLOR=0.5,0.5,0.5,0.0
+    NEOPIXEL_PROGRESS LED=case_led INDEX=0  NUM=21 TEMPLATE="led_printer_speed_progress" FGCOLOR1=0.5,0.0,0.0,0.0 BGCOLOR=0.5,0.5,0.5,0.0
  
 ### ESEMPI
 
 [gcode_macro NEOPIXEL_CASE]
 gcode:
     {% set led = params.LED|default("case_led") %}
-    NEOPIXEL_PROGRESS LED={led} INDEX=21 NUM=21 TEMPLATE="led_bed_temp_progress"       FGCOLOR1=0.0,0.5,0.0,0.0 FGCOLOR2=0.2,0.2,0.0,0.0 FGCOLOR3=0.5,0.0,0.0,0.0 BGCOLOR=0.5,0.5,0.5,0.0
+    NEOPIXEL_PROGRESS LED={led} INDEX=21 NUM=21 TEMPLATE="led_bed_temp_progress"       FGCOLOR1=0.0,0.5,0.0,0.0 FGCOLOR2=0.2,0.2,0.0,0.0 BGCOLOR=0.5,0.5,0.5,0.0
     NEOPIXEL_PROGRESS LED={led} INDEX=0  NUM=21  TEMPLATE="led_extruder_temp_progress" FGCOLOR1=0.0,0.5,0.0,0.0 FGCOLOR2=0.2,0.2,0.0,0.0 FGCOLOR3=0.5,0.0,0.0,0.0 BGCOLOR=0.5,0.5,0.5,0.0
     #NEOPIXEL_PROGRESS LED={led} INDEX=21 NUM=10 TEMPLATE="led_print_percent_progress" BGCOLOR=0.0,0.3,0.0,0.0 FGCOLOR=0.5,0.0,0.5,0.0
     #NEOPIXEL_PROGRESS LED={led} INDEX=31 NUM=10 TEMPLATE="led_printer_speed_progress" BGCOLOR=0.0,0.0,0.3,0.0 FGCOLOR=0.5,0.0,0.5,0.0
@@ -76,14 +76,22 @@ gcode:
     {% set template = params.TEMPLATE %}
     {% set bgcolor = params.BGCOLOR %}
     {% set fgcolor1 = params.FGCOLOR1 %}
-    {% set fgcolor2 = params.FGCOLOR2 %}
-    {% set fgcolor3 = params.FGCOLOR3 %}
-    
+    {% set fgcolor2 = params.FGCOLOR2|default("") %}
+    {% set fgcolor3 = params.FGCOLOR3|default("") %}
+    {% set ncolor = 0 %}
+
+    {% if (fgcolor2 =="" and fgcolor3 =="") %}
+         {% set ncolor = 1 %}
+    {% elif fgcolor3 =="" %}
+         {% set ncolor = 2 %}
+    {% else %}
+         {% set ncolor = 3 %}
+    {% endif %}
 
     {% for i in range(index,index+num|int) %}
-        {% if i < (index+(num/3)|int) %}
+        {% if (i-index) < ((num/ncolor)|int) %}
             SET_LED_TEMPLATE LED={led} INDEX={i+1} TEMPLATE={template} param_led_num={i-index+1} param_led_total={num} param_bg_color={bgcolor} param_fg_color={fgcolor1}
-        {% elif   i < (index+(num/3*2)|int)|int %}
+        {% elif   (i-index) < (num/ncolor*2)|int %}
             SET_LED_TEMPLATE LED={led} INDEX={i+1} TEMPLATE={template} param_led_num={i-index+1} param_led_total={num} param_bg_color={bgcolor} param_fg_color={fgcolor2}
         {% else %}
             SET_LED_TEMPLATE LED={led} INDEX={i+1} TEMPLATE={template} param_led_num={i-index+1} param_led_total={num} param_bg_color={bgcolor} param_fg_color={fgcolor3}
