led and sensorless lib

--- a/Klicky/klicky-z-calibration.cfg
+++ b/Klicky/klicky-z-calibration.cfg
@@ -1,10 +1,10 @@
 [z_calibration]
-nozzle_xy_position:   142,250
-switch_xy_position:   141.0,226
+nozzle_xy_position:   145,254
+switch_xy_position:   141.5,229
 bed_xy_position:      125,125
 switch_offset:        0.54  # Decreasing the "switch_offset" will move the nozzle more away from the bed.
 clearance:            10
-#max_deviation:        10
+max_deviation:        10
 speed: 300
 #   The moving speed in X and Y. The default is 50 mm/s.
 
