--- a/Macros/LEDS/case_leds.cfg
+++ b/Macros/LEDS/case_leds.cfg
@@ -3,70 +3,6 @@
 # 9-27 destra
 # 28-46 sx
 
-### ESPERIMENTI
-
-[gcode_macro SET_HEATER_TEMPERATURE]
-rename_existing: SET_HEATER_TEMPERATURE_1
-gcode:
-    STATUS_HEATING
-    SET_HEATER_TEMPERATURE_1 { rawparams }
-
-[gcode_macro M190]
-rename_existing: M190.1
-gcode:
-    STATUS_HEATING
-    M190.1 { rawparams }
-
-
-[gcode_macro M109]
-rename_existing: M109.1
-gcode:
-    STATUS_HEATING
-    M109.1 { rawparams }
-
-[gcode_macro M104]
-rename_existing: M104.1
-gcode:
-    STATUS_HEATING
-    M104.1 { rawparams }
-
-[gcode_macro M140]
-rename_existing: M140.1
-gcode:
-    STATUS_HEATING
-    M140.1 { rawparams }
-### ESPERIMENTI INTEGRAZIONE SB LED
-[gcode_macro STATUS_HEATING]
-rename_existing: STATUS_HEATING_OLD
-gcode:
-    NEOPIXEL_PROGRESS LED=case_led INDEX=21 NUM=21 TEMPLATE="led_bed_temp_progress"       FGCOLOR1=0.0,0.5,0.0,0.0 FGCOLOR2=0.0,0.0,0.8,0.0 BGCOLOR=0.5,0.5,0.5,0.0
-    NEOPIXEL_PROGRESS LED=case_led INDEX=0  NUM=21  TEMPLATE="led_extruder_temp_progress" FGCOLOR1=0.0,0.5,0.0,0.0 FGCOLOR2=0.0,0.0,0.8,0.0 FGCOLOR3=0.5,0.0,0.0,0.0 BGCOLOR=0.5,0.5,0.5,0.0
-
-[gcode_macro STATUS_PRINTING]
-rename_existing: STATUS_PRINTING_OLD
-gcode:
-    NEOPIXEL_PROGRESS LED=case_led INDEX=21 NUM=21 TEMPLATE="led_print_percent_progress" FGCOLOR1=0.5,0.0,0.0,0.0 BGCOLOR=0.5,0.5,0.5,0.0
-    NEOPIXEL_PROGRESS LED=case_led INDEX=0  NUM=21 TEMPLATE="led_printer_speed_progress" FGCOLOR1=0.5,0.0,0.0,0.0 BGCOLOR=0.5,0.5,0.5,0.0
- 
-### ESEMPI
-
-[gcode_macro NEOPIXEL_CASE]
-gcode:
-    {% set led = params.LED|default("case_led") %}
-    NEOPIXEL_PROGRESS LED={led} INDEX=21 NUM=21 TEMPLATE="led_bed_temp_progress"       FGCOLOR1=0.0,0.5,0.0,0.0 FGCOLOR2=0.2,0.2,0.0,0.0 BGCOLOR=0.5,0.5,0.5,0.0
-    NEOPIXEL_PROGRESS LED={led} INDEX=0  NUM=21  TEMPLATE="led_extruder_temp_progress" FGCOLOR1=0.0,0.5,0.0,0.0 FGCOLOR2=0.2,0.2,0.0,0.0 FGCOLOR3=0.5,0.0,0.0,0.0 BGCOLOR=0.5,0.5,0.5,0.0
-    #NEOPIXEL_PROGRESS LED={led} INDEX=21 NUM=10 TEMPLATE="led_print_percent_progress" BGCOLOR=0.0,0.3,0.0,0.0 FGCOLOR=0.5,0.0,0.5,0.0
-    #NEOPIXEL_PROGRESS LED={led} INDEX=31 NUM=10 TEMPLATE="led_printer_speed_progress" BGCOLOR=0.0,0.0,0.3,0.0 FGCOLOR=0.5,0.0,0.5,0.0
-
-[gcode_macro NEOPIXEL_MLM]
-gcode:
-    {% set led = params.LED %}
-    NEOPIXEL_PROGRESS LED={led} INDEX=0 NUM=16 TEMPLATE="led_extruder_temp_progress" FGCOLOR1=0.0,0.5,0.0,0.0 FGCOLOR2=0.2,0.2,0.0,0.0 FGCOLOR3=0.5,0.0,0.0,0.0 BGCOLOR=0.5,0.5,0.5,0.0
-    NEOPIXEL_PROGRESS LED={led} INDEX=17 NUM=16 TEMPLATE="led_bed_temp_progress" FGCOLOR1=0.0,0.5,0.0,0.0 FGCOLOR2=0.2,0.2,0.0,0.0 FGCOLOR3=0.5,0.0,0.0,0.0 BGCOLOR=0.5,0.5,0.5,0.0
-    NEOPIXEL_PROGRESS LED={led} INDEX=33 NUM=16 TEMPLATE="led_print_percent_progress" FGCOLOR1=0.0,0.5,0.0,0.0 FGCOLOR2=0.2,0.2,0.0,0.0 FGCOLOR3=0.5,0.0,0.0,0.0 BGCOLOR=0.5,0.5,0.5,0.0
-    #NEOPIXEL_PROGRESS LED={led} INDEX=31 NUM=10 TEMPLATE="led_printer_speed_progress" BGCOLOR=0.0,0.0,0.3,0.0 FGCOLOR=0.5,0.0,0.5,0.0
-
- 
 
 [gcode_macro NEOPIXEL_PROGRESS]
 gcode:
@@ -90,6 +26,7 @@ gcode:
 
     {% for i in range(index,index+num|int) %}
         {% if (i-index) < ((num/ncolor)|int) %}
+
             SET_LED_TEMPLATE LED={led} INDEX={i+1} TEMPLATE={template} param_led_num={i-index+1} param_led_total={num} param_bg_color={bgcolor} param_fg_color={fgcolor1}
         {% elif   (i-index) < (num/ncolor*2)|int %}
             SET_LED_TEMPLATE LED={led} INDEX={i+1} TEMPLATE={template} param_led_num={i-index+1} param_led_total={num} param_bg_color={bgcolor} param_fg_color={fgcolor2}
@@ -170,3 +107,25 @@ text:
     {% else %}
         {param_bg_color[0]},{param_bg_color[1]}, {param_bg_color[2]}, {param_bg_color[3]}
     {% endif %}
+
+[display_template led_printer_alternating]
+param_led_num:  0
+param_led_total: 1
+param_bg_color: 0.0, 0.0, 0.0, 0.0
+param_fg_color: 0.0, 0.0, 0.0, 0.0
+text:
+   
+    {% if (param_led_num % 2) == 0 %}
+        {param_fg_color[0]},{param_fg_color[1]}, {param_fg_color[2]}, {param_fg_color[3]}
+    {% else %}
+        {param_bg_color[0]},{param_bg_color[1]}, {param_bg_color[2]}, {param_bg_color[3]}
+    {% endif %}
+
+[display_template led_printer_static]
+param_led_num:  0
+param_led_total: 1
+param_bg_color: 0.0, 0.0, 0.0, 0.0
+param_fg_color: 0.0, 0.0, 0.0, 0.0
+text:
+   
+    {param_fg_color[0]},{param_fg_color[1]}, {param_fg_color[2]}, {param_fg_color[3]}
