--- a/printer.cfg
+++ b/printer.cfg
@@ -24,19 +24,22 @@
 [include Macros/printer_macros.cfg]
 [include Macros/base_macros.cfg]
 [include Macros/shellCommands.cfg]
-[include Macros/homing.cfg]
+
 [include Macros/Helpers/filament_swap.cfg]
 [include Macros/Calibration/calibration.cfg]
 [include Macros/Calibration/pa_calibrate.cfg]
 [include Macros/shelly.cfg]
 [include Macros/LEDS/sb_leds.cfg]
 [include Macros/LEDS/case_leds.cfg]
+[include Macros/LEDS/sb_case_leds.cfg]
+[include Macros/LEDS/sb_leds_macros.cfg]
 
 
 ################
 #### Klicky ####
 ################
 [include Klicky/klicky-probe.cfg]
+[include Macros/homing.cfg]
 
 ################
 #### Probe ####
