--- a/moonraker.conf
+++ b/moonraker.conf
@@ -83,3 +83,10 @@ type: git_repo
 path: ~/crowsnest
 origin: https://github.com/mainsail-crew/crowsnest.git
 managed_services: crowsnest
+
+[update_manager client sensorless_homing_helper]
+type: git_repo
+primary_branch: main
+path: ~/sensorless_homing_helper
+origin: https://github.com/eamars/sensorless_homing_helper.git
+install_script: install.sh
