--- a/printer.cfg
+++ b/printer.cfg
@@ -17,6 +17,7 @@
 [include Hardware/Axis/Z_Steppers.cfg]
 [include Hardware/Axis/XY_Steppers.cfg]
 [include Hardware/Axis/E_Stepper.cfg]
+[include Hardware/nozzle_scrub.cfg]
 
 ################
 #### Macros ####
@@ -39,7 +40,7 @@
 #### Klicky ####
 ################
 [include Klicky/klicky-probe.cfg]
-[include Macros/homing.cfg]
+#[include Macros/homing.cfg]
 
 ################
 #### Probe ####
