--- a/Hardware/Axis/XY_Steppers.cfg
+++ b/Hardware/Axis/XY_Steppers.cfg
@@ -13,14 +13,14 @@ enable_pin: !PG2
 rotation_distance: 40
 microsteps: 32
 full_steps_per_rotation:200  #set to 400 for 0.9 degree stepper
-endstop_pin: tmc2209_stepper_y:virtual_endstop
-#endstop_pin: ^PG6
+#endstop_pin: tmc2209_stepper_y:virtual_endstop
+endstop_pin: ^PG6
 position_min: 0
 ##--------------------------------------------------------------------
 
 ##  Uncomment below for 250mm build
 position_endstop: 250
-position_max: 256
+position_max: 250
 
 ##  Uncomment for 300mm build
 #position_endstop: 300
@@ -42,8 +42,8 @@ interpolate: False
 run_current: 0.8
 sense_resistor: 0.110
 stealthchop_threshold: 0
-diag_pin: ^PG12
-driver_SGTHRS: 50
+#diag_pin: ^PG12
+#driver_SGTHRS: 50
 
 ##  A Stepper - Right
 ##  Connected to MOTOR_1
@@ -58,8 +58,8 @@ enable_pin: !PA0
 rotation_distance: 40
 microsteps: 32
 full_steps_per_rotation:200  #set to 400 for 0.9 degree stepper
-endstop_pin: tmc2209_stepper_x:virtual_endstop
-#endstop_pin: ^PG12  
+#endstop_pin: tmc2209_stepper_x:virtual_endstop
+endstop_pin: ^PG15  
 position_min: 0
 ##--------------------------------------------------------------------
 
@@ -88,5 +88,5 @@ interpolate: False
 run_current: 0.8
 sense_resistor: 0.110
 stealthchop_threshold: 0
-diag_pin: ^PG11
-driver_SGTHRS: 60
+#diag_pin: ^PG11
+#driver_SGTHRS: 60
