--- a/Hardware/thermistors.cfg
+++ b/Hardware/thermistors.cfg
@@ -12,7 +12,8 @@ sensor_pin: PF3
 #####################################################################
 
 [extruder]
-sensor_type: ATC Semitec 104GT-2
+sensor_type: ATC Semitec 104NT-4-R025H42G
+#sensor_type: ATC Semitec 104GT-2
 sensor_pin: EBBCan: PA0
 
 #####################################################################
