--- a/Macros/printer_macros.cfg
+++ b/Macros/printer_macros.cfg
@@ -49,10 +49,11 @@ gcode:
     BED_MESH_PROFILE LOAD=hot2
     #BED_MESH_CALIBRATE
     SET_TEMP HEATER="extruder" TEMP={EXTRUDER} WAIT=1 ;wait final extruder temp
+    CLEAN_NOZZLE
     CALIBRATE_Z
     RESET_EXTRUDER        
-    #PURGE
-
+    
+    SET_FAN_SPEED FAN=nevermore SPEED=1
     PRIME_LINE
     #COUNTER_ON
     STATUS_READY
