--- a/moonraker.conf
+++ b/moonraker.conf
@@ -86,3 +86,11 @@ primary_branch: main
 path: ~/sensorless_homing_helper
 origin: https://github.com/eamars/sensorless_homing_helper.git
 install_script: install.sh
+
+[update_manager moonraker-telegram-bot]
+type: git_repo
+path: ~/moonraker-telegram-bot
+origin: https://github.com/nlef/moonraker-telegram-bot.git
+env: ~/moonraker-telegram-bot-env/bin/python
+requirements: scripts/requirements.txt
+install_script: scripts/install.sh
