--- a/printer.cfg
+++ b/printer.cfg
@@ -47,6 +47,11 @@
 ################
 [include Probe/Probe.cfg]
 
+################
+#### ERCF   ####
+################
+[include ERCF/ercf.cfg]
+
 #*# <---------------------- SAVE_CONFIG ---------------------->
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
 #*#
