--- a/ERCF/ercf_parameters.cfg
+++ b/ERCF/ercf_parameters.cfg
@@ -4,7 +4,7 @@
 # The encoder resolution is determined by running the ERCF_CALIBRATE_ENCODER
 # See the manual for details on both settings
 encoder_pin: ^ercf:PA6
-encoder_resolution: 1.333156
+encoder_resolution: 1.404297
 
 # Speeds and accels
 # Long moves are faster than the small ones
@@ -28,7 +28,7 @@ log_statistics: 1
 # Default values:
 # MG90S servo: Up=30, Down=140
 # SAVOX SH0255MG: Up=140, Down=30
-servo_up_angle: 160
+servo_up_angle: 150
 servo_down_angle: 65
 extra_servo_dwell_up: 0                                                            # Additional dwell time in ms to apply to dwell prior to turning off the servo
 extra_servo_dwell_down: 0                                                          # Additional dwell time in ms to apply to dwell prior to turning off the servo
@@ -36,10 +36,10 @@ extra_servo_dwell_down: 0                                                       
 # Base value for the loading length used by the auto-calibration macro
 # Please use a value SMALLER than the real reverse bowden length (like 50mm less)
 # This is only used during calibration, and has no impact on normal running
-calibration_bowden_length: 880
+calibration_bowden_length: 840
 
 # The position of each tool on the selector.  See the manual for setting these values
-colorselector: 1.6, 29.0, 44.7, 69.6, 91.2, 112.8, 138.4, 160.0, 180.0
+colorselector: 2.3, 23.2, 44.0#, 69.6, 91.2, 112.8, 138.4, 160.0, 180.0
 
 # Distance between the end of the bowden tube and the nozzle
 # This value can be determined by manually inserting filament at the very beginning of your
@@ -47,7 +47,7 @@ colorselector: 1.6, 29.0, 44.7, 69.6, 91.2, 112.8, 138.4, 160.0, 180.0
 # Subtract 1-2mm from that distance distance to get this value.  If you have large gaps
 # in your purge tower, increase this value.  If you have blobs, reduce this value.
 # This value will depend on your extruder, hotend and nozzle setup.
-end_of_bowden_to_nozzle: 72 
+end_of_bowden_to_nozzle: 72
 
 # if you are getting "timer too close" errors, increase the number of moves used during loading and unloading
 num_moves: 2 # Number of moves to make when loading or unloading
