--- a/ERCF/ercf_hardware.cfg
+++ b/ERCF/ercf_hardware.cfg
@@ -9,7 +9,7 @@ serial: /dev/serial/by-id/usb-Klipper_samd21g18a_E3F47C1D5136575020312E301B1317F
 step_pin: ercf:PA4
 dir_pin: !ercf:PA10
 enable_pin: !ercf:PA2
-rotation_distance: 22.554216869	#Bondtech 5mm Drive Gears
+rotation_distance: 21.92	#Bondtech 5mm Drive Gears
 gear_ratio: 80:20
 microsteps: 16  # Please do not go higher than 16, this can cause 'MCU Timer too close' issues under Klipper
 full_steps_per_rotation: 200	#200 for 1.8 degree, 400 for 0.9 degree
