--- a/Macros/printer_macros.cfg
+++ b/Macros/printer_macros.cfg
@@ -29,9 +29,12 @@ gcode:
     {% set EXTRUDER = params.EXTRUDER_TEMP|int %}
     {% set ENCLOSURE = params.ENCLOSURE_TEMP|int %}
     {% set MATERIAL = params.MATERIAL|default("XXX")|string %}
+    {% set TOOL = params.TOOL|default(-90)|int %}
     {% set FL_SIZE = params.SIZE|default("0_0_0_0")|string %} # Get bounding box of the first layer
-    SET_TEMP HEATER="bed" TEMP={BED} ; set final bed temp
-    SET_TEMP HEATER="extruder" TEMP=150 ; set hotend to 150 for heatsoak
+    
+    SET_TEMP HEATER="bed" TEMP={BED} WAIT=0; set final bed temp
+    SET_TEMP HEATER="extruder" TEMP=150 WAIT=0; set hotend to 150 for heatsoak
+    DISPLAYTEXT TEXT={TOOL}
     CHOME
     
     
@@ -48,11 +51,17 @@ gcode:
     #ADAPTIVE_BED_MESH
     BED_MESH_PROFILE LOAD=hot2
     #BED_MESH_CALIBRATE
-    SET_TEMP HEATER="extruder" TEMP={EXTRUDER} WAIT=1 ;wait final extruder temp
+    #SET_TEMP HEATER="extruder" TEMP={EXTRUDER} WAIT=1 ;wait final extruder temp
     CLEAN_NOZZLE
     CALIBRATE_Z
     RESET_EXTRUDER        
-    
+    #{% if TOOL >= -1 %}
+        ERCF_HOME
+        _ERCF_CHANGE_TOOL_STANDALONE TOOL={TOOL}
+        #SET_FILAMENT_SENSOR SENSOR=encoder_sensor ENABLE=0
+        #T{TOOL}
+    #{% endif %}
+    SET_TEMP HEATER="extruder" TEMP={EXTRUDER} WAIT=1 ;wait final extruder temp
     SET_FAN_SPEED FAN=nevermore SPEED=1
     PRIME_LINE
     #COUNTER_ON
