--- a/Macros/printer_macros.cfg
+++ b/Macros/printer_macros.cfg
@@ -32,8 +32,9 @@ gcode:
     {% set TOOL = params.TOOL|default(-90)|int %}
     {% set FL_SIZE = params.SIZE|default("0_0_0_0")|string %} # Get bounding box of the first layer
     
+    CLEAR_PAUSE
     SET_TEMP HEATER="bed" TEMP={BED} WAIT=0; set final bed temp
-    SET_TEMP HEATER="extruder" TEMP=150 WAIT=0; set hotend to 150 for heatsoak
+    #SET_TEMP HEATER="extruder" TEMP=150 WAIT=0; set hotend to 150 for heatsoak
     DISPLAYTEXT TEXT={TOOL}
     CHOME
     
@@ -51,22 +52,18 @@ gcode:
     #ADAPTIVE_BED_MESH
     BED_MESH_PROFILE LOAD=hot2
     #BED_MESH_CALIBRATE
-    #SET_TEMP HEATER="extruder" TEMP={EXTRUDER} WAIT=1 ;wait final extruder temp
+    SET_TEMP HEATER="extruder" TEMP={EXTRUDER} WAIT=1 ;wait final extruder temp
     CLEAN_NOZZLE
     CALIBRATE_Z
     RESET_EXTRUDER        
-    #{% if TOOL >= -1 %}
-        ERCF_HOME
-        _ERCF_CHANGE_TOOL_STANDALONE TOOL={TOOL}
-        #SET_FILAMENT_SENSOR SENSOR=encoder_sensor ENABLE=0
-        #T{TOOL}
-    #{% endif %}
     SET_TEMP HEATER="extruder" TEMP={EXTRUDER} WAIT=1 ;wait final extruder temp
+
     SET_FAN_SPEED FAN=nevermore SPEED=1
-    PRIME_LINE
+    #PRIME_LINE
     #COUNTER_ON
     STATUS_READY
     DISPLAYTEXT TEXT="Printing..."
+    
    
 
 [gcode_macro PRINT_END]
