--- a/printer.cfg
+++ b/printer.cfg
@@ -50,7 +50,7 @@
 ################
 #### ERCF   ####
 ################
-[include ERCF/ercf.cfg]
+#[include ERCF/ercf.cfg]
 
 #*# <---------------------- SAVE_CONFIG ---------------------->
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
