--- a/Macros/printer_macros.cfg
+++ b/Macros/printer_macros.cfg
@@ -50,6 +50,7 @@ gcode:
     #COMPUTE_MESH_PARAMETERS SIZE={FL_SIZE}
     #CLEAN_NOZZLE
     #ADAPTIVE_BED_MESH
+    SET_FAN_SPEED FAN=nevermore SPEED=1
     BED_MESH_PROFILE LOAD=hot2
     #BED_MESH_CALIBRATE
     SET_TEMP HEATER="extruder" TEMP={EXTRUDER} WAIT=1 ;wait final extruder temp
@@ -58,8 +59,8 @@ gcode:
     RESET_EXTRUDER        
     SET_TEMP HEATER="extruder" TEMP={EXTRUDER} WAIT=1 ;wait final extruder temp
 
-    SET_FAN_SPEED FAN=nevermore SPEED=1
-    #PRIME_LINE
+    
+    PRIME_LINE
     #COUNTER_ON
     STATUS_READY
     DISPLAYTEXT TEXT="Printing..."
@@ -97,7 +98,7 @@ gcode:
     {% set FILENAME = FILENAME[0:-6] + " has finished!" %}
     {% endif %}
     DISPLAYTEXT TEXT={FILENAME}
-    SHUTDOWN
+    #SHUTDOWN
  
      
 
