--- a/Hardware/Axis/Z_Steppers.cfg
+++ b/Hardware/Axis/Z_Steppers.cfg
@@ -15,20 +15,25 @@ enable_pin: !PF14
 # Rotation Distance for TR8x8 = 8, TR8x4 = 4, TR8x2 = 2
 rotation_distance: 4  
 microsteps: 32
-endstop_pin: ^PG13
+#endstop_pin: ^PG13
+endstop_pin: probe:z_virtual_endstop
 
 #endstop_pin: EBBCan: PC13
 ##  Z-position of nozzle (in mm) to z-endstop trigger point relative to print surface (Z0)
 ##  (+) value = endstop above Z0, (-) value = endstop below
 ##  Increasing position_endstop brings nozzle closer to the bed
 ##  After you run Z_ENDSTOP_CALIBRATE, position_endstop will be stored at the very end of your config
-position_endstop: 6.65
+#position_endstop: 6.65
 ## All builds use same Max Z
 position_max: 250
 position_min: -8
 homing_speed: 8.0 # Leadscrews are slower than 2.4, 10 is a recommended max.
 second_homing_speed: 3
 homing_retract_dist: 3
+
+[safe_z_home]
+home_xy_position: 125, 125
+
 
 ##  Make sure to update below for your relevant driver (2208 or 2209)
 [tmc2209 stepper_z]
