--- a/Macros/printer_macros.cfg
+++ b/Macros/printer_macros.cfg
@@ -47,15 +47,16 @@ gcode:
     Z_TILT_ADJUST
     #QUAD_GANTRY_LEVEL
     HOME
+    G1 z25 F600
     #COMPUTE_MESH_PARAMETERS SIZE={FL_SIZE}
     #CLEAN_NOZZLE
     #ADAPTIVE_BED_MESH
-    SET_FAN_SPEED FAN=nevermore SPEED=1
+    #SET_FAN_SPEED FAN=nevermore SPEED=1
     BED_MESH_PROFILE LOAD=hot2
     #BED_MESH_CALIBRATE
     SET_TEMP HEATER="extruder" TEMP={EXTRUDER} WAIT=1 ;wait final extruder temp
-    CLEAN_NOZZLE
-    CALIBRATE_Z
+    #CLEAN_NOZZLE
+    #CALIBRATE_Z
     RESET_EXTRUDER        
     SET_TEMP HEATER="extruder" TEMP={EXTRUDER} WAIT=1 ;wait final extruder temp
 
@@ -98,7 +99,7 @@ gcode:
     {% set FILENAME = FILENAME[0:-6] + " has finished!" %}
     {% endif %}
     DISPLAYTEXT TEXT={FILENAME}
-    #SHUTDOWN
+    SHUTDOWN
  
      
 
