--- a/Probe/Probe.cfg
+++ b/Probe/Probe.cfg
@@ -19,14 +19,31 @@ pin: EBBCan: PC13
 #--------------------------------------------------------------------
 
 x_offset: 0
-y_offset: 19.75
-z_offset: 0.42
-speed: 5
-samples:1 
+y_offset: 0
+
+z_offset: 0.290
+speed: 2
+samples:3 
 samples_result: median
 sample_retract_dist: 2.0
 samples_tolerance: 0.01
-samples_tolerance_retries: 3
+samples_tolerance_retries: 5
+activate_gcode:
+    {% set PROBE_TEMP = 150 %}
+    {% set MAX_TEMP = PROBE_TEMP + 5 %}
+    {% set ACTUAL_TEMP = printer.extruder.temperature %}
+    {% set TARGET_TEMP = printer.extruder.target %}
+
+    {% if TARGET_TEMP > PROBE_TEMP %}
+        { action_respond_info('Extruder temperature target of %.1fC is too high, lowering to %.1fC' % (TARGET_TEMP, PROBE_TEMP)) }
+        M109 S{ PROBE_TEMP }
+    {% else %}
+        # Temperature target is already low enough, but nozzle may still be too hot.
+        {% if ACTUAL_TEMP > MAX_TEMP %}
+            { action_respond_info('Extruder temperature %.1fC is still too high, waiting until below %.1fC' % (ACTUAL_TEMP, MAX_TEMP)) }
+            TEMPERATURE_WAIT SENSOR=extruder MAXIMUM={ MAX_TEMP }
+        {% endif %}
+    {% endif %}
 
 [z_tilt]
 ##  Use Z_TILT_ADJUST to level the bed .
@@ -74,7 +91,7 @@ retry_tolerance: 0.0075
 ###################
 # Bed mesh calibrate
 [bed_mesh]
-speed: 300
+speed: 100
 horizontal_move_z: 10
 mesh_min: 40, 40
 mesh_max: 220,220
