--- a/moonraker.conf
+++ b/moonraker.conf
@@ -87,10 +87,10 @@ path: ~/sensorless_homing_helper
 origin: https://github.com/eamars/sensorless_homing_helper.git
 install_script: install.sh
 
-[update_manager moonraker-telegram-bot]
-type: git_repo
-path: ~/moonraker-telegram-bot
-origin: https://github.com/nlef/moonraker-telegram-bot.git
-env: ~/moonraker-telegram-bot-env/bin/python
-requirements: scripts/requirements.txt
-install_script: scripts/install.sh
+# [update_manager moonraker-telegram-bot]
+# type: git_repo
+# path: ~/moonraker-telegram-bot
+# origin: https://github.com/nlef/moonraker-telegram-bot.git
+# env: ~/moonraker-telegram-bot-env/bin/python
+# requirements: scripts/requirements.txt
+# install_script: scripts/install.sh
