--- a/printer.cfg
+++ b/printer.cfg
@@ -45,6 +45,46 @@
 ################
 #### Probe ####
 ################
+[probe]
+##  Inductive Probe
+##  This probe is not used for Z height, only Quad Gantry Leveling
+
+# Select the probe port by type:
+## For the PROBE port. Will not work with Diode. May need pull-up resistor from signal to 24V.
+#pin: ~!PB7
+## For the DIAG_7 port. NEEDS BAT85 DIODE! Change to !PG15 if probe is NO.
+pin: EBBCan: PC13
+## For Octopus Pro Probe port; NPN and PNP proximity switch types can be set by jumper
+#pin: ~!PC5
+
+#--------------------------------------------------------------------
+
+x_offset: 0
+y_offset: 0
+#z_offset: 0
+
+speed: 4
+samples:3 
+samples_result: median
+sample_retract_dist: 2.0
+samples_tolerance: 0.01
+samples_tolerance_retries: 10
+# activate_gcode:
+#     {% set PROBE_TEMP = 150 %}
+#     {% set MAX_TEMP = PROBE_TEMP + 5 %}
+#     {% set ACTUAL_TEMP = printer.extruder.temperature %}
+#     {% set TARGET_TEMP = printer.extruder.target %}
+
+#     {% if TARGET_TEMP > PROBE_TEMP %}
+#         { action_respond_info('Extruder temperature target of %.1fC is too high, lowering to %.1fC' % (TARGET_TEMP, PROBE_TEMP)) }
+#         M109 S{ PROBE_TEMP }
+#     {% else %}
+#         # Temperature target is already low enough, but nozzle may still be too hot.
+#         {% if ACTUAL_TEMP > MAX_TEMP %}
+#             { action_respond_info('Extruder temperature %.1fC is still too high, waiting until below %.1fC' % (ACTUAL_TEMP, MAX_TEMP)) }
+#             TEMPERATURE_WAIT SENSOR=extruder MAXIMUM={ MAX_TEMP }
+#         {% endif %}
+#     {% endif %}
 [include Probe/Probe.cfg]
 
 ################
@@ -54,25 +94,6 @@
 
 #*# <---------------------- SAVE_CONFIG ---------------------->
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
-#*#
-#*# [bed_mesh default]
-#*# version = 1
-#*# points =
-#*# 	  0.043125, 0.026250, 0.002500, -0.013750, 0.003750
-#*# 	  0.016250, 0.039375, 0.001875, 0.021875, -0.005625
-#*# 	  0.047500, 0.031250, 0.021875, 0.000000, -0.001250
-#*# 	  0.060000, 0.040625, 0.038750, 0.017500, 0.017500
-#*# 	  0.057500, 0.051875, 0.062500, 0.041250, 0.055000
-#*# tension = 0.2
-#*# min_x = 40.0
-#*# algo = bicubic
-#*# y_count = 5
-#*# mesh_y_pps = 2
-#*# min_y = 40.0
-#*# x_count = 5
-#*# max_y = 220.0
-#*# mesh_x_pps = 2
-#*# max_x = 220.0
 #*#
 #*# [bed_mesh hot]
 #*# version = 1
@@ -96,11 +117,71 @@
 #*# [bed_mesh hot2]
 #*# version = 1
 #*# points =
-#*# 	  0.043125, 0.026250, 0.002500, -0.013750, 0.003750
-#*# 	  0.016250, 0.039375, 0.001875, 0.021875, -0.005625
-#*# 	  0.047500, 0.031250, 0.021875, 0.000000, -0.001250
-#*# 	  0.060000, 0.040625, 0.038750, 0.017500, 0.017500
-#*# 	  0.057500, 0.051875, 0.062500, 0.041250, 0.055000
+#*# 	0.043125, 0.026250, 0.002500, -0.013750, 0.003750
+#*# 	0.016250, 0.039375, 0.001875, 0.021875, -0.005625
+#*# 	0.047500, 0.031250, 0.021875, 0.000000, -0.001250
+#*# 	0.060000, 0.040625, 0.038750, 0.017500, 0.017500
+#*# 	0.057500, 0.051875, 0.062500, 0.041250, 0.055000
+#*# tension = 0.2
+#*# min_x = 40.0
+#*# algo = bicubic
+#*# y_count = 5
+#*# mesh_y_pps = 2
+#*# min_y = 40.0
+#*# x_count = 5
+#*# max_y = 220.0
+#*# mesh_x_pps = 2
+#*# max_x = 220.0
+#*#
+#*# [probe]
+#*# z_offset = -0.600
+#*#
+#*# [bed_mesh Freddo]
+#*# version = 1
+#*# points =
+#*# 	0.065313, 0.070625, 0.059375, -0.004062, 0.059688
+#*# 	0.015625, 0.011875, 0.013750, -0.005625, 0.063125
+#*# 	0.076250, 0.064063, -0.020625, 0.000000, 0.036250
+#*# 	0.064375, 0.090000, 0.047500, 0.019062, 0.049687
+#*# 	0.038437, 0.049062, 0.031562, 0.022812, 0.030625
+#*# tension = 0.2
+#*# min_x = 40.0
+#*# algo = bicubic
+#*# y_count = 5
+#*# mesh_y_pps = 2
+#*# min_y = 40.0
+#*# x_count = 5
+#*# max_y = 220.0
+#*# mesh_x_pps = 2
+#*# max_x = 220.0
+#*#
+#*# [bed_mesh default]
+#*# version = 1
+#*# points =
+#*# 	  0.077813, 0.084063, 0.039063, 0.022188, 0.080938
+#*# 	  0.015625, 0.032813, 0.007813, -0.022500, 0.016563
+#*# 	  0.034375, 0.031563, -0.045937, 0.000000, -0.000938
+#*# 	  0.010312, 0.029687, 0.016250, -0.015000, 0.001875
+#*# 	  -0.030313, 0.005625, -0.045625, -0.050313, -0.025625
+#*# tension = 0.2
+#*# min_x = 40.0
+#*# algo = bicubic
+#*# y_count = 5
+#*# mesh_y_pps = 2
+#*# min_y = 40.0
+#*# x_count = 5
+#*# max_y = 220.0
+#*# mesh_x_pps = 2
+#*# max_x = 220.0
+#*#
+#*# [bed_mesh hot3]
+#*# version = 1
+#*# points =
+#*# 	  0.077813, 0.084063, 0.039063, 0.022188, 0.080938
+#*# 	  0.015625, 0.032813, 0.007813, -0.022500, 0.016563
+#*# 	  0.034375, 0.031563, -0.045937, 0.000000, -0.000938
+#*# 	  0.010312, 0.029687, 0.016250, -0.015000, 0.001875
+#*# 	  -0.030313, 0.005625, -0.045625, -0.050313, -0.025625
 #*# tension = 0.2
 #*# min_x = 40.0
 #*# algo = bicubic
