--- a/Hardware/Axis/Z_Steppers.cfg
+++ b/Hardware/Axis/Z_Steppers.cfg
@@ -14,7 +14,7 @@ dir_pin: PF12
 enable_pin: !PF14
 # Rotation Distance for TR8x8 = 8, TR8x4 = 4, TR8x2 = 2
 rotation_distance: 4  
-microsteps: 32
+microsteps: 64
 #endstop_pin: ^PG13
 endstop_pin: probe:z_virtual_endstop
 
@@ -33,7 +33,7 @@ homing_retract_dist: 3
 
 [safe_z_home]
 home_xy_position: 125, 125
-
+z_hop: 10
 
 ##  Make sure to update below for your relevant driver (2208 or 2209)
 [tmc2209 stepper_z]
@@ -53,7 +53,7 @@ dir_pin: PG1
 enable_pin: !PF15
 # Rotation Distance for TR8x8 = 8, TR8x4 = 4, TR8x2 = 2
 rotation_distance: 4    
-microsteps: 32
+microsteps: 64
 
 
 ##  Make sure to update below for your relevant driver (2208 or 2209)
@@ -73,7 +73,7 @@ dir_pin: PG3
 enable_pin: !PG5
 # Rotation Distance for TR8x8 = 8, TR8x4 = 4, TR8x2 = 2
 rotation_distance: 4  
-microsteps: 32
+microsteps: 64
 
 ##  Make sure to update below for your relevant driver (2208 or 2209)
 [tmc2209 stepper_z2]
