--- a/Probe/Probe.cfg
+++ b/Probe/Probe.cfg
@@ -4,46 +4,46 @@
 #   Probe
 #####################################################################
 
-[probe]
-##  Inductive Probe
-##  This probe is not used for Z height, only Quad Gantry Leveling
+# [probe]
+# ##  Inductive Probe
+# ##  This probe is not used for Z height, only Quad Gantry Leveling
 
-# Select the probe port by type:
-## For the PROBE port. Will not work with Diode. May need pull-up resistor from signal to 24V.
-#pin: ~!PB7
-## For the DIAG_7 port. NEEDS BAT85 DIODE! Change to !PG15 if probe is NO.
-pin: EBBCan: PC13
-## For Octopus Pro Probe port; NPN and PNP proximity switch types can be set by jumper
-#pin: ~!PC5
+# # Select the probe port by type:
+# ## For the PROBE port. Will not work with Diode. May need pull-up resistor from signal to 24V.
+# #pin: ~!PB7
+# ## For the DIAG_7 port. NEEDS BAT85 DIODE! Change to !PG15 if probe is NO.
+# pin: EBBCan: PC13
+# ## For Octopus Pro Probe port; NPN and PNP proximity switch types can be set by jumper
+# #pin: ~!PC5
 
-#--------------------------------------------------------------------
+# #--------------------------------------------------------------------
 
-x_offset: 0
-y_offset: 0
+# x_offset: 0
+# y_offset: 0
 
-z_offset: 0.290
-speed: 2
-samples:3 
-samples_result: median
-sample_retract_dist: 2.0
-samples_tolerance: 0.01
-samples_tolerance_retries: 5
-activate_gcode:
-    {% set PROBE_TEMP = 150 %}
-    {% set MAX_TEMP = PROBE_TEMP + 5 %}
-    {% set ACTUAL_TEMP = printer.extruder.temperature %}
-    {% set TARGET_TEMP = printer.extruder.target %}
 
-    {% if TARGET_TEMP > PROBE_TEMP %}
-        { action_respond_info('Extruder temperature target of %.1fC is too high, lowering to %.1fC' % (TARGET_TEMP, PROBE_TEMP)) }
-        M109 S{ PROBE_TEMP }
-    {% else %}
-        # Temperature target is already low enough, but nozzle may still be too hot.
-        {% if ACTUAL_TEMP > MAX_TEMP %}
-            { action_respond_info('Extruder temperature %.1fC is still too high, waiting until below %.1fC' % (ACTUAL_TEMP, MAX_TEMP)) }
-            TEMPERATURE_WAIT SENSOR=extruder MAXIMUM={ MAX_TEMP }
-        {% endif %}
-    {% endif %}
+# speed: 2
+# samples:3 
+# samples_result: median
+# sample_retract_dist: 2.0
+# samples_tolerance: 0.01
+# samples_tolerance_retries: 5
+# activate_gcode:
+#     {% set PROBE_TEMP = 150 %}
+#     {% set MAX_TEMP = PROBE_TEMP + 5 %}
+#     {% set ACTUAL_TEMP = printer.extruder.temperature %}
+#     {% set TARGET_TEMP = printer.extruder.target %}
+
+#     {% if TARGET_TEMP > PROBE_TEMP %}
+#         { action_respond_info('Extruder temperature target of %.1fC is too high, lowering to %.1fC' % (TARGET_TEMP, PROBE_TEMP)) }
+#         M109 S{ PROBE_TEMP }
+#     {% else %}
+#         # Temperature target is already low enough, but nozzle may still be too hot.
+#         {% if ACTUAL_TEMP > MAX_TEMP %}
+#             { action_respond_info('Extruder temperature %.1fC is still too high, waiting until below %.1fC' % (ACTUAL_TEMP, MAX_TEMP)) }
+#             TEMPERATURE_WAIT SENSOR=extruder MAXIMUM={ MAX_TEMP }
+#         {% endif %}
+#     {% endif %}
 
 [z_tilt]
 ##  Use Z_TILT_ADJUST to level the bed .
